# axum-app

./: .env.build  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yaml  up.sh
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json
migrations/: 20250506122810_test.up.sql  20250509172841_create_users_table.down.sql  20250509172841_create_users_table.up.sql  20250510171946_create_core_tables.down.sql  20250510171946_create_core_tables.up.sql  20250510171946_create_stock_day_all_tables.up.sql
src/: bootstrap.rs  config.rs  error.rs  logging.rs  main.rs  router.rs  server.rs  state.rs
src/api/: handlers.rs  response.rs
src/api/handlers/: health.rs  upload.rs
src/utils/: shutdown.rs
