[package]
name = "axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6"
tracing-error = "0.2"
thiserror = "2.0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "chrono"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
chrono = "0.4.41"
